[package]
name = "finte"
version = "0.2.0"
edition = "2018"
description = "convert between integer and Rust enum"
repository = "https://github.com/hismito/finte"
license = "MIT"

[dependencies.finte-derive]
version = "0.2"
optional = true

[features]
default = [ "derive" ]
derive = [ "finte-derive" ]
